opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/vcaml"
bug-reports: "https://github.com/janestreet/vcaml/issues"
dev-repo: "git+https://github.com/janestreet/vcaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/vcaml/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "base"
  "core"
  "core_kernel"
  "core_unix"
  "expect_test_helpers_async"
  "ppx_jane"
  "textutils"
  "angstrom"                  {>= "0.14.1"}
  "angstrom-async"            {>= "0.14.1"}
  "dune"                      {>= "2.0.0"}
  "faraday"
]
synopsis: "OCaml bindings for the Neovim API"
description: "
The Neovim text editor comes with an RPC-based public API
which can be used to control the editor.  This set of libraries implements
an OCaml interface to those APIs, for the purpose of permitting neovim
plugins to be written in OCaml.
"
