opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/vcaml"
bug-reports: "https://github.com/janestreet/vcaml/issues"
dev-repo: "git+https://github.com/janestreet/vcaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/vcaml/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core"
  "core_kernel"
  "core_unix"
  "expect_test_helpers_async"
  "jsonaf"
  "man_in_the_middle_debugger"
  "ppx_jane"
  "ppx_optcomp"
  "semantic_version"
  "textutils"
  "angstrom"                   {>= "0.15.0"}
  "angstrom-async"             {>= "0.15.0"}
  "dune"                       {>= "2.0.0"}
  "faraday"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml bindings for the Neovim API"
description: "
VCaml provides OCaml bindings for Neovim's and models some of Neovim's
more tricky semantics so plugin authors do not need to consider them when writing plugins.
Plugins communicate with Neovim remotely over Msgpack RPC (see `:h api` for details).
"
