(library (name vcaml_test) (public_name vcaml.test)
 (libraries async core_kernel.core expect_test_helpers_async core.sys_unix
  core.unix_pseudo_terminal vcaml)
 (preprocessor_deps config_ext.h) (preprocess (pps ppx_jane)))

(rule (targets config_ext.h) (deps)
 (action (bash "cp %{lib:core.unix_pseudo_terminal:config_ext.h} .")))