(library
 (name vcaml_semantics_test)
 (public_name vcaml.test.semantics)
 (libraries async async.async_quickcheck core core_unix
   expect_test_helpers_async msgpack nvim_internal core_kernel.reversed_list
   core_unix.signal_unix base_trie core_unix.unix_pseudo_terminal vcaml
   vcaml.test.helpers)
 (preprocessor_deps config_ext.h)
 (preprocess
  (pps ppx_jane ppx_optcomp))
 (flags :standard -alert -vcaml_private)
 (inline_tests))

(rule
 (targets config_ext.h)
 (deps)
 (action
  (bash "cp %{lib:core_unix.unix_pseudo_terminal:config_ext.h} .")))
